@@ -15,6 +15,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpEntity;
@@ -27,6 +28,8 @@ import org.springframework.stereotype.Repository;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.RestTemplate;
+import org.slf4j.Logger; 
+import org.slf4j.LoggerFactory;
 
 import jakarta.annotation.PostConstruct;
 import jakarta.json.Json;
@@ -39,6 +42,7 @@ import sg.edu.nus.iss.stonks.model.ScrapedPost;
 import sg.edu.nus.iss.stonks.model.Stock;
 import sg.edu.nus.iss.stonks.model.StockPrice;
 import sg.edu.nus.iss.stonks.model.Stocklist;
+
 
 @Repository
 public class ScrapRepo {
@@ -57,20 +61,25 @@ public class ScrapRepo {
     private static final String accessTokenUrl = "https://www.reddit.com/api/v1/access_token";
     private static final String apiRequestUrl = "https://oauth.reddit.com/";
     private static final String finnhubUrl = "https://finnhub.io/api/v1/";
+    private static final Logger logger = LoggerFactory.getLogger(ScrapRepo.class);
     private static List<Stocklist> stockList = new ArrayList<>();
+    private static Map<String, String> tickerToCompanyNameMap = new HashMap<>();
     private static Set<String> validTickersSet = new HashSet<>();
-    private static final Set<String> commonWordTickersSet = new HashSet<>(Arrays.asList(
-        "A", "ACT", "ADD", "AKA", "ALL", "AM", "AMC", "AN", "AND", "ANY", "ARE", "AS", "AT",
-        "BACK", "BE", "BC", "BETA", "BIO", "BOOK", "BROS", "BY", "TECH", "UK", "LAW", "TALK",
-        "CALM", "CAN", "CAP", "CAR", "CARS", "CCL", "CHART", "CLOSE", "COST", "LOAN", "MASS",
-        "DAY", "DOW", "DTE","EDIT", "EVER","F", "FIVE", "FOR", "FUND", "PAY", "SITE", "HOPE",
-        "GOLD", "GO", "GOOD", "GT", "HAS", "HE", "HIGH", "HI", "HOLD", "ICU", "IRS", "IT", "BIRD",
-        "JOB", "K", "LMT", "LOW", "LUCK","M", "MAIN", "MAR", "ME", "MSN", "SHIP", "GAIN",
-        "NAT", "NET", "NEW", "NOW","OLD", "ON", "ONE", "OPEN", "OR", "OUT", "FORM", "MIND",
-        "P/E", "PER", "PLAY", "POST", "PRICE", "QUOTE",  "RAY", "REAL", "CASH", "API", "TOP",
-        "S", "SAFE", "SAT", "SAY", "SEE", "SELF", "SELL", "SHARE", "SO", "SOLD", "STOCK", 
-        "T", "THE", "TICKER", "TRADE", "TSLA", "TWO","UP", "USE", "EU", "NEXT", "HIT", "FAST",
-        "VALUE", "VS","WAY", "WELL", "WHO","XP","YIELD", "YOU"));
+   
+    private static final Set<String> TICKER_CONTEXT_KEYWORDS = Set.of(
+            "stock", "stocks", "shares", "share", "ticker", "buy", "sell", "buying",
+            "selling", "hold", "holding", "short", "shorting", "long", "calls", "puts",
+            "options", "equity", "dividend", "earnings", "market", "cap", "trading",
+            "invest", "investment", "portfolio", "bullish", "bearish", "moon", "diamond",
+            "hands", "tendies", "yolo", "dd", "due diligence"
+    );
+
+    private static final int SCORE_DOLLAR_PREFIX = 100; // Very strong signal
+    private static final int SCORE_ALL_CAPS = 25; // Strong signal
+    private static final int SCORE_CONTEXT_KEYWORD = 8; // Moderate signal per keyword
+    private static final int SCORE_COMPANY_NAME_MATCH = 15; // Moderate signal
+    private static final int MAX_CONTEXT_SCORE = 24; // Cap context score
+    private static final int MIN_CONFIDENCE_THRESHOLD = 20;
 
     @PostConstruct
     public void init() {
@@ -78,6 +87,9 @@ public class ScrapRepo {
             csvFile(); // Only load if DB is empty
         }
         validTickersSet = sqlRepo.getAllSymbols(); // Load from DB
+        List<Stocklist> stocks = sqlRepo.getAllStocklist();
+        tickerToCompanyNameMap = stocks.stream()
+                .collect(Collectors.toMap(Stocklist::getSymbol, Stocklist::getCompanyName, (existing, replacement) -> existing));
     }
 
     private String getRedditAccessToken() {
@@ -118,7 +130,7 @@ public class ScrapRepo {
         List<String> subreddits = Arrays.asList("stocks", "wallstreetbets", "investing", "StockMarket",
                 "DeepFuckingValue");
         subreddits.forEach(subreddit -> {
-            String url = apiRequestUrl + "r/" + subreddit + "/rising.json?limit=10";
+            String url = apiRequestUrl + "r/" + subreddit + "/rising.json?limit=15";
             ResponseEntity<String> response = restTemplate.exchange(
                     url, HttpMethod.GET,
                     new HttpEntity<>(headers), String.class);
@@ -176,93 +188,155 @@ public class ScrapRepo {
     }
 
     public String filterTicker(String text) {
-        // check for $ prefix
-        String[] words = text.split("\\s+");
-        for (String word : words) {
-            if (word.startsWith("$")) {
-                String processed = word.substring(1).replaceAll("[^A-Za-z]", "").toUpperCase().trim();
-                // Skip words with mixed letters and numbers
-                if (!word.substring(1).matches(".*\\d+.*") && validTickersSet.contains(processed)
-                        && processed.length() <= 5) {
-                    return processed; // best case for exact match
-                }
-            }
+        if (text == null || text.isBlank()) {
+            return null;
         }
-        // word score counter
+
         Map<String, Integer> tickerScores = new HashMap<>();
-    
-        for (String word : words) {
-            // Skip words that contain any digits
-            if (word.matches(".*\\d+.*")) {
+        String textLower = text.toLowerCase(); // For context and company name checks
+        // Split considering various separators but keep $ attached if present
+        String[] words = text.split("[\\s\\p{Punct}&&[^$]]+"); // Split on whitespace or punctuation (except $)
+        List<String> wordList = Arrays.asList(words); // For easier context checking
+
+        String potentialDollarTicker = null;
+        int dollarTickerScore = 0;
+
+        for (int i = 0; i < wordList.size(); i++) {
+            String originalWord = wordList.get(i);
+            if (originalWord == null || originalWord.isEmpty()) {
                 continue;
             }
-            String potentialTicker = word.replaceAll("[^A-Za-z]", "").toUpperCase().trim();
-            // Skip invalid tickers
-            if (!validTickersSet.contains(potentialTicker) || potentialTicker.length() > 5
-                    || potentialTicker.isEmpty()) {
-                continue;
-            }
-            int score = 0;
-            // Common words minus pts
-            if (commonWordTickersSet.contains(potentialTicker)) {
-                score -= 5;
+
+            int currentScore = 0;
+            String potentialTicker;
+            boolean isDollarPrefixed = false;
+
+            // 1. Check for $ Prefix (Highest Priority)
+            if (originalWord.startsWith("$") && originalWord.length() > 1) {
+                potentialTicker = originalWord.substring(1).replaceAll("[^A-Za-z]", ""); // Clean after $
+                potentialTicker = potentialTicker.toUpperCase();
+                isDollarPrefixed = true;
+
+                // Only proceed if it's a valid ticker after cleaning
+                if (isValidTicker(potentialTicker)) {
+                    currentScore = SCORE_DOLLAR_PREFIX;
+                    // Store this separately as it's a very strong candidate
+                     if (currentScore > dollarTickerScore) {
+                         dollarTickerScore = currentScore;
+                         potentialDollarTicker = potentialTicker;
+                     }
+                    // Add score to main map as well, in case context reinforces it
+                    tickerScores.put(potentialTicker, tickerScores.getOrDefault(potentialTicker, 0) + currentScore);
+                } else {
+                    potentialTicker = null; // Invalid after cleaning
+                }
             } else {
-                score += 2; // word not in common
-            }
-            // Check for company name matches in the text
-            for (Stocklist stock : stockList) {
-                if (potentialTicker.equals(stock.getSymbol())) {
-                    String companyName = stock.getCompanyName().toLowerCase();
-                    // Full company name match
-                    if (text.toLowerCase().contains(companyName)) {
-                        score += 10;
-                        break;
-                    }
-                    // Partial name matches
-                    String[] nameParts = companyName.split("\\s+");
-                    int matchedParts = 0;
-                    for (String part : nameParts) {
-                        if (part.length() > 2 && text.toLowerCase().contains(part)) {
-                            matchedParts++;
+                // 2. Process regular words (potential tickers)
+                potentialTicker = originalWord.replaceAll("[^A-Za-z]", "").toUpperCase();
+
+                // Basic validity checks
+                if (!isValidTicker(potentialTicker)) {
+                    continue; // Skip if not in our valid list or wrong format
+                }
+
+                // 3. Score based on Case (All Caps?)
+                // Check if the original word (before upper-casing) was all caps and matches the cleaned ticker
+                if (isAllUpperCase(originalWord.replaceAll("[^A-Za-z]", "")) && originalWord.replaceAll("[^A-Za-z]", "").equals(potentialTicker)) {
+                    currentScore += SCORE_ALL_CAPS;
+                }
+
+                // 4. Score based on Context Keywords
+                int contextScore = 0;
+                int start = Math.max(0, i - 5); // Check 5 words before
+                int end = Math.min(wordList.size(), i + 6); // Check 5 words after (inclusive of current word's potential context)
+                for (int j = start; j < end; j++) {
+                    if (i == j) continue; // Don't check the word against itself
+                    String contextWord = wordList.get(j).toLowerCase();
+                    if (TICKER_CONTEXT_KEYWORDS.contains(contextWord)) {
+                        contextScore += SCORE_CONTEXT_KEYWORD;
+                        if (contextScore >= MAX_CONTEXT_SCORE) {
+                            break; // Stop adding context score if cap reached
                         }
                     }
-                    if (matchedParts > 0) {
-                        score += Math.min(matchedParts * 2, 6); // Cap at 6 points
+                }
+                currentScore += contextScore;
+
+                // 5. Score based on Company Name Match
+                String companyName = tickerToCompanyNameMap.get(potentialTicker);
+                if (companyName != null && !companyName.isEmpty()) {
+                    // Simple check if company name (partially) exists in the lowercased text
+                    // More sophisticated matching (e.g., checking word boundaries) could be added
+                    if (textLower.contains(companyName.toLowerCase())) {
+                        currentScore += SCORE_COMPANY_NAME_MATCH;
                     }
                 }
-            }
-            // Check for word frequency
-            int wordFrequency = 0;
-            for (String w : words) {
-                if (!w.matches(".*\\d+.*") && w.replaceAll("[^A-Za-z]", "").equalsIgnoreCase(potentialTicker)) {
-                    wordFrequency++;
+
+                // Add score to the map
+                if (currentScore > 0) {
+                    tickerScores.put(potentialTicker, tickerScores.getOrDefault(potentialTicker, 0) + currentScore);
                 }
             }
-            score += Math.min(wordFrequency - 1, 3);
-    
-            // Add to scores map
-            tickerScores.put(potentialTicker, score);
-        }
-        // Return the ticker with the highest score
+        } // End word loop
+
+        // Determine the best ticker
         String bestTicker = null;
         int highestScore = 0;
-    
+
+        // If a $ticker was found and scored highly, it's a strong contender
+        if (potentialDollarTicker != null) {
+             bestTicker = potentialDollarTicker;
+             highestScore = tickerScores.getOrDefault(bestTicker, 0); // Get its total score including context etc.
+             logger.trace("Dollar-prefixed ticker {} found with initial score {}", bestTicker, dollarTickerScore);
+        }
+
+
+        // Compare with other potential tickers
         for (Map.Entry<String, Integer> entry : tickerScores.entrySet()) {
+            // If this entry has a higher score than the current best (or the $ticker)
             if (entry.getValue() > highestScore) {
                 highestScore = entry.getValue();
                 bestTicker = entry.getKey();
             }
+            // Tie-breaking: If scores are equal, prefer the $ticker if it exists
+            else if (entry.getValue() == highestScore && potentialDollarTicker != null && !entry.getKey().equals(potentialDollarTicker)) {
+                 // Keep the potentialDollarTicker as bestTicker if scores are equal
+                 logger.trace("Ticker {} tied with dollar-ticker {} score {}, preferring dollar-ticker.", entry.getKey(), potentialDollarTicker, highestScore);
+            }
         }
-        // Only return if the score> 3
-        if (highestScore >= 3) {
-            System.out.println(" Found ticker: " + bestTicker + " in text: "
-                    + " with score: " + highestScore);
+
+
+        // Final Decision based on Threshold
+        if (bestTicker != null && highestScore >= MIN_CONFIDENCE_THRESHOLD) {
+            logger.debug("Determined best ticker: {} with score: {} from text snippet: \"{}\"",
+                         bestTicker, highestScore, text.length() > 100 ? text.substring(0, 100) + "..." : text);
             return bestTicker;
         } else {
-            System.out.println(" No ticker found in text: " + text);
-            return null;
+            if (bestTicker != null) {
+                 logger.trace("Ticker {} found, but score {} is below threshold {}. Discarding.", bestTicker, highestScore, MIN_CONFIDENCE_THRESHOLD);
+            } else {
+                logger.trace("No confident ticker found in text snippet: \"{}\"", text.length() > 100 ? text.substring(0, 100) + "..." : text);
+            }
+            return null; // Return null if no ticker meets the confidence threshold
         }
     }
+
+    private boolean isAllUpperCase(String s) {
+        if (s == null || s.isEmpty()) {
+            return false;
+        }
+        for (char c : s.toCharArray()) {
+            if (!Character.isUpperCase(c)) {
+                return false;
+            }
+        }
+        // check for letters
+        return s.matches(".*[A-Z].*");
+    }
+
+    private boolean isValidTicker(String ticker) {
+        return ticker != null && !ticker.isEmpty() && ticker.length() <= 5 && validTickersSet.contains(ticker);
+    }
+
 
     public void csvFile() {
         InputStream is = getClass().getResourceAsStream("/nasdaq_tickers.csv");
